small tweaks for node rearrangements

--- a/update/production/conf/nodes_all.conf
+++ b/update/production/conf/nodes_all.conf
@@ -1,7 +1,7 @@
-aceserver
-vab
-gene
-blast
-be1
-brie6
+aceserver.cshl.edu
+vab.wormbase.org
+gene.wormbase.org
+blast.wormbase.org
+be1.wormbase.org
+brie6.cshl.edu
 
