added 2008; fixed citeulike API integration

--- a/log_analysis/analog.conf
+++ b/log_analysis/analog.conf
@@ -47,8 +47,10 @@ FAILREFEXCLUDE http://*wormbase*
 SEARCHWORDEXCLUDE of,and,or,to,the,in,on,a,for
 
 # Memory issues
-HOSTLOWMEM 2
-FILELOWMEM 2
+HOSTLOWMEM 3
+FILELOWMEM 3
+REFLOWMEM 3
+BROWLOWMEM 3
 
 # ERRFILE errors.txt
 REQINCLUDE *
