--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -2,6 +2,8 @@
 # This is not necessary if the development node and all
 # production nodes reside within the firewall
 STAGING_NODE=brie3
+FTP_SERVER=brie4.cshl.org
+
 
 ##############################
 # The website itself
