exclude localdefs.pm

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -9,6 +9,7 @@ FTP_SERVER=brie4.cshl.org
 # The website itself
 ##############################
 # Nodes which serve pages and need the software. Also includes the staging node
+#SITE_NODES=("gene.wormbase.org freeze1.wormbase.org")
 SITE_NODES=("vab.wormbase.org
         gene.wormbase.org
         brie6.cshl.org
