updated contact email

--- a/squid/etc/squid.fe.wormbase.org.conf
+++ b/squid/etc/squid.fe.wormbase.org.conf
@@ -1043,7 +1043,7 @@ icp_access allow all
 #	mail if the cache dies.  The default is "webmaster."
 #
 #Default:
-cache_mgr harris@cshl.edu
+cache_mgr info@toddharris.net
 
 #  TAG: cache_effective_user, cache_effective_group
 #       The user and group that squid should run as
