added additional databases; ignoring the extlib directory when syncing

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -52,9 +52,14 @@ ACEDB_DIR=/usr/local/wormbase/acedb/wormbase_${VERSION}
 # MySQL
 ##############################
 # Nodes that host mysql databases
-#MYSQL_NODES=("brie6.cshl.edu be1.wormbase.org vab.wormbase.org 
-#              gene.wormbase.org blast.wormbase.org  aceserver.cshl.edu")
-MYSQL_NODES=("freeze1.wormbase.org freeze2.wormbase.org")
+MYSQL_NODES=("brie6.cshl.edu
+	      be1.wormbase.org
+              vab.wormbase.org 
+              gene.wormbase.org
+              blast.wormbase.org
+              aceserver.cshl.edu
+	      freeze1.wormbase.org
+	      freeze2.wormbase.org")
 
 # The location of the staging mysql data dir
 STAGING_MYSQL_DATA_DIR=/usr/local/mysql/data
@@ -63,13 +68,15 @@ STAGING_MYSQL_DATA_DIR=/usr/local/mysql/data
 TARGET_MYSQL_DATA_DIR=/usr/local/mysql/data
 
 # MySQL databases that we are mirroring
-MYSQL_DATABASES=("c_brenneri
+MYSQL_DATABASES=("b_malayi
+		  c_brenneri
                   c_briggsae 
                   c_elegans 
                   c_elegans_gmap 
                   c_elegans_pmap 
                   c_remanei 
                   c_japonica 
+		  m_hapla
                   p_pacificus
                   clustal
 ")
