syncing directly to my nfs mount now

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -4,6 +4,9 @@
 STAGING_NODE=brie3
 FTP_SERVER=brie4.cshl.org
 
+NFS_NODE=brie6.cshl.org
+NFS_ROOT=/usr/local/wormbase/nfs
+
 
 ##############################
 # The website itself
@@ -88,7 +91,7 @@ MYSQL_DATABASES=("b_malayi
 ##############################
 # Support databases
 ##############################
-SUPPORT_DB_DIRECTORY=/usr/local/wormbase/databases
+SUPPORT_DB_DIRECTORY=/usr/local/wormbase/nfs/databases
 SUPPORT_DB_NODES=("blast.wormbase.org
 		   aceserver.cshl.edu
 		   gene.wormbase.org 
