fixed small bug in string comparison for staging node

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -42,7 +42,7 @@ THIRD_PARTY_BUILD_DIR=build
 # AceDB
 ##############################
 # Nodes which serve Acedb
-ACEDB_NODES=("be1.wormbase.org brie6.cshl.edu aceserver.cshl.org")
+ACEDB_NODES=("be1.wormbase.org brie6.cshl.edu aceserver.cshl.org brie3.cshl.org")
 
 # Where our ACEDB files reside
 ACEDB_ROOT=/usr/local/wormbase/acedb
