disabling some nodes

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -13,15 +13,25 @@ NFS_ROOT=/usr/local/wormbase/nfs
 ##############################
 # Nodes which serve pages and need the software. Also includes the staging node
 #SITE_NODES=("gene.wormbase.org freeze1.wormbase.org")
+#SITE_NODES=("vab.wormbase.org
+#        gene.wormbase.org
+#        brie6.cshl.org
+#        aceserver.cshl.org
+#        be1.wormbase.org
+#        freeze1.wormbase.org
+#        freeze2.wormbase.org
+#        blast.wormbase.org
+#     ")
 SITE_NODES=("vab.wormbase.org
         gene.wormbase.org
         brie6.cshl.org
         aceserver.cshl.org
-        be1.wormbase.org
         freeze1.wormbase.org
         freeze2.wormbase.org
         blast.wormbase.org
      ")
+
+
 
 
 # Local site staging directory
