various fixes for production updates

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -12,23 +12,16 @@ NFS_ROOT=/usr/local/wormbase/nfs
 # The website itself
 ##############################
 # Nodes which serve pages and need the software. Also includes the staging node
-#SITE_NODES=("gene.wormbase.org freeze1.wormbase.org")
-#SITE_NODES=("vab.wormbase.org
-#        gene.wormbase.org
-#        brie6.cshl.org
-#        aceserver.cshl.org
-#        be1.wormbase.org
-#        freeze1.wormbase.org
-#        freeze2.wormbase.org
-#        blast.wormbase.org
-#     ")
+#SITE_NODES=("canopus.caltech.edu")
 SITE_NODES=("vab.wormbase.org
-        gene.wormbase.org
-        brie6.cshl.org
-        aceserver.cshl.org
-        freeze1.wormbase.org
-        freeze2.wormbase.org
-        blast.wormbase.org
+             gene.wormbase.org
+             brie6.cshl.org
+             aceserver.cshl.org
+             freeze1.wormbase.org
+             freeze2.wormbase.org
+             blast.wormbase.org
+             be1.wormbase.org
+             canopus.caltech.edu
      ")
 
 
@@ -52,7 +45,11 @@ THIRD_PARTY_BUILD_DIR=build
 # AceDB
 ##############################
 # Nodes which serve Acedb
-ACEDB_NODES=("be1.wormbase.org brie6.cshl.edu aceserver.cshl.org")
+#ACEDB_NODES=("be1.wormbase.org 
+#              brie6.cshl.edu 
+#              aceserver.cshl.org")
+ACEDB_NODES=("canopus.caltech.edu")
+
 
 # Where our ACEDB files reside
 ACEDB_ROOT=/usr/local/wormbase/acedb
@@ -65,14 +62,17 @@ ACEDB_DIR=/usr/local/wormbase/acedb/wormbase_${VERSION}
 # MySQL
 ##############################
 # Nodes that host mysql databases
-MYSQL_NODES=("brie6.cshl.edu
-	      be1.wormbase.org
-              vab.wormbase.org 
-              gene.wormbase.org
-              blast.wormbase.org
-              aceserver.cshl.edu
-	      freeze1.wormbase.org
-	      freeze2.wormbase.org")
+MYSQL_NODES=("canopus.caltech.edu")
+#MYSQL_NODES=("brie6.cshl.edu
+#	      be1.wormbase.org
+#              vab.wormbase.org 
+#              gene.wormbase.org
+#              blast.wormbase.org
+#              aceserver.cshl.edu
+#	      freeze1.wormbase.org
+#	      freeze2.wormbase.org
+#              canopus.caltech.edu
+#")
 
 # The location of the staging mysql data dir
 STAGING_MYSQL_DATA_DIR=/usr/local/mysql/data
