--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -12,11 +12,10 @@ NFS_ROOT=/usr/local/wormbase/nfs
 # The website itself
 ##############################
 # Nodes which serve pages and need the software. Also includes the staging node
-#SITE_NODES=("canopus.caltech.edu")
 SITE_NODES=("vab.wormbase.org
              gene.wormbase.org
-             brie6.cshl.org
              aceserver.cshl.org
+             brie6.cshl.org
              freeze1.wormbase.org
              freeze2.wormbase.org
              blast.wormbase.org
@@ -45,11 +44,13 @@ THIRD_PARTY_BUILD_DIR=build
 # AceDB
 ##############################
 # Nodes which serve Acedb
-#ACEDB_NODES=("be1.wormbase.org 
-#              brie6.cshl.edu 
-#              aceserver.cshl.org")
-ACEDB_NODES=("canopus.caltech.edu")
-
+ACEDB_NODES=("be1.wormbase.org 
+              brie6.cshl.edu 
+	      canopus.caltech.edu")
+#ACEDB_NODES=("brie6.cshl.edu 
+#	      canopus.caltech.edu")
+#              aceserver.cshl.org
+#ACEDB_NODES=("canopus.caltech.edu")
 
 # Where our ACEDB files reside
 ACEDB_ROOT=/usr/local/wormbase/acedb
@@ -62,17 +63,17 @@ ACEDB_DIR=/usr/local/wormbase/acedb/wormbase_${VERSION}
 # MySQL
 ##############################
 # Nodes that host mysql databases
-MYSQL_NODES=("canopus.caltech.edu")
-#MYSQL_NODES=("brie6.cshl.edu
-#	      be1.wormbase.org
+#MYSQL_NODES=("canopus.caltech.edu")
+MYSQL_NODES=("brie6.cshl.edu
+	      be1.wormbase.org
+              canopus.caltech.edu
+")
+
 #              vab.wormbase.org 
 #              gene.wormbase.org
 #              blast.wormbase.org
-#              aceserver.cshl.edu
 #	      freeze1.wormbase.org
 #	      freeze2.wormbase.org
-#              canopus.caltech.edu
-#")
 
 # The location of the staging mysql data dir
 STAGING_MYSQL_DATA_DIR=/usr/local/mysql/data
