--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -63,11 +63,11 @@ ACEDB_DIR=/usr/local/wormbase/acedb/wormbase_${VERSION}
 # MySQL
 ##############################
 # Nodes that host mysql databases
-#MYSQL_NODES=("canopus.caltech.edu")
-MYSQL_NODES=("brie6.cshl.edu
-	      be1.wormbase.org
-              canopus.caltech.edu
-")
+MYSQL_NODES=("canopus.caltech.edu")
+#MYSQL_NODES=("brie6.cshl.edu
+#	      be1.wormbase.org
+#              canopus.caltech.edu
+#")
 
 #              vab.wormbase.org 
 #              gene.wormbase.org
