--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -9,6 +9,19 @@ NFS_ROOT=/usr/local/wormbase/nfs
 
 
 
+SPECIES=("
+	c_elegans
+	c_briggsae
+	c_brenneri
+	c_japonica
+	c_remanei
+	p_pacificus
+	m_hapla
+	m_incognita
+	h_contortus
+	b_malayi
+	")
+
 
 ##############################
 # The website itself
@@ -65,11 +78,11 @@ ACEDB_DIR=/usr/local/wormbase/acedb/wormbase_${VERSION}
 # MySQL
 ##############################
 # Nodes that host mysql databases
-MYSQL_NODES=("canopus.caltech.edu")
-#MYSQL_NODES=("brie6.cshl.edu
-#	      be1.wormbase.org
-#              canopus.caltech.edu
-#")
+#MYSQL_NODES=("canopus.caltech.edu")
+MYSQL_NODES=("brie6.cshl.edu
+             be1.wormbase.org
+              canopus.caltech.edu
+")
 
 #              vab.wormbase.org 
 #              gene.wormbase.org
