added ACL for gbrowse2 paths. How many other people have gbrowse2 sitting behind a reverse proxy. None?

--- a/squid/etc/squid.fe.wormbase.org.conf
+++ b/squid/etc/squid.fe.wormbase.org.conf
@@ -129,6 +129,7 @@ icp_port 0
 #acl GBROWSE urlpath_regex \/db\/seq\/gbrowse\/
 # NOTE: This will also block caching of gbrowse_img (which is as it should be)
 acl GBROWSE urlpath_regex -i /db/seq/gbrowse/
+acl GBROWSE2 urlpath_regex -i /db/gb2/gbrowse/
 #acl GBROWSEIMG urlpath_regex -i /ace_images/gbrowse/
 acl news     url_regex -i rss
 acl feedback url_regex -i feedback    
@@ -139,6 +140,7 @@ acl wiki     url_regex -i wiki
 acl nbrowse  url_regex -i nbrowse
 
 no_cache deny GBROWSE
+no_cache deny GBROWSE2
 no_cache deny bugzilla
 no_cache deny news
 no_cache deny feedback
@@ -381,7 +383,7 @@ hosts_file /etc/hosts
 #redirect_program /usr/local/wormbase-admin/squid/redirectors/load_balancer.pl
 #redirect_program /usr/local/wormbase-admin/squid/redirectors/separate_gbrowse_acedb.pl
 #redirect_program /usr/local/wormbase-admin/squid/redirectors/all_vab.pl
-redirect_program /usr/local/wormbase-admin/squid/redirectors/load_balancer-url.pl
+redirect_program /home/todd/projects/wormbase/admin/squid/redirectors/load_balancer-url.pl
 
 # POSSIBLE CONFIG ISSUE - Is this a suitable number of children?
 #  TAG: redirect_children
