--- a/squid/etc/squid-3.1.1.conf
+++ b/squid/etc/squid-3.1.1.conf
@@ -30,7 +30,7 @@
 #  TAG: http_port
 # Description: where squid will listen for http requests
 # WormBase: This should be the full IP of the server and listening port
-http_port 143.48.220.124:80
+http_port 143.48.220.124:80 accel defaultsite=www.wormbase.org
 
 
 #  TAG: https_port
@@ -1024,7 +1024,7 @@ icp_access allow all
 #	mail if the cache dies.  The default is "webmaster."
 #
 #Default:
-cache_mgr Todd Harris <info@toddharris.net>
+cache_mgr harris@cshl.edu
 
 #  TAG: cache_effective_user, cache_effective_group
 #       The user and group that squid should run as
