tweaked oicr server list; sync directly to brie3 now

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -40,9 +40,8 @@ SITE_NODES=("
              blast.wormbase.org
      ")
 
+# The following sites at OICR require the website-classic codebase
 OICR_SITE_NODES=("
-             wb-acedb1.oicr.on.ca
-	     wb-acedb2.oicr.on.ca
              wb-blast.oicr.on.ca
      ")
 
@@ -72,8 +71,7 @@ ACEDB_NODES=("be1.wormbase.org
               brie6.cshl.edu 
 	      canopus.caltech.edu")
 
-OICR_ACEDB_NODES=("wb-acedb2.oicr.on.ca
-                   wb-blast.oicr.on.ca")
+OICR_ACEDB_NODES=("wb-blast.oicr.on.ca")
 
 
 
@@ -108,7 +106,6 @@ OICR_MYSQL_NODES=("
 	wb-www1.oicr.on.ca
 	wb-www2.oicr.on.ca
 	wb-www3-warm.oicr.on.ca
-        wb-acedb2.oicr.on.ca
         wb-blast.oicr.on.ca
 ");
 
