fixed direct syncing to FTP site

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -2,7 +2,9 @@
 # This is not necessary if the development node and all
 # production nodes reside within the firewall
 STAGING_NODE=brie3
+
 FTP_SERVER=brie4.cshl.org
+FTP_SITE_USER=todd
 
 NFS_NODE=brie6.cshl.org
 NFS_ROOT=/usr/local/wormbase/nfs
