fixed super annoying difference in behaviour of the cache_effective_user; now set to nobody; squid did not have correct privs to start since it needs to bind to 80

--- a/squid/etc/squid.fe.wormbase.org.conf
+++ b/squid/etc/squid.fe.wormbase.org.conf
@@ -1024,12 +1024,12 @@ icp_access allow all
 #	mail if the cache dies.  The default is "webmaster."
 #
 #Default:
-cache_mgr Todd Harris <info@toddharris.net>
+cache_mgr info@toddharris.net
 
 #  TAG: cache_effective_user, cache_effective_group
 #       The user and group that squid should run as
-cache_effective_user squid
-cache_effective_group squid
+#cache_effective_user squid
+#cache_effective_group squid
 
 # POSSIBLE CONFIG ISSUE
 #  TAG: visible_hostname
