added logrotate configuration; modified acedb purge script; updated conf for oicr nodes

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -31,13 +31,9 @@ SPECIES=("
 ##############################
 # Nodes which serve pages and need the software. Also includes the staging node
 SITE_NODES=("
-             vab.wormbase.org
              gene.wormbase.org
-             aceserver.cshl.org
              brie6.cshl.org
-             freeze1.wormbase.org
-             freeze2.wormbase.org
-             be1.wormbase.org
+	     be1.wormbase.org
              canopus.caltech.edu
              blast.wormbase.org
      ")
@@ -45,9 +41,9 @@ SITE_NODES=("
 # The following sites at OICR require the website-classic codebase
 OICR_SITE_NODES=("
              wb-blast.oicr.on.ca
+	     wb-acedb2.oicr.on.ca
      ")
-
-
+#             wb-www3-warm.oicr.on.ca
 
 # Local site staging directory
 SITE_STAGING_DIRECTORY=/usr/local/wormbase/website-classic-staging
@@ -68,13 +64,15 @@ THIRD_PARTY_BUILD_DIR=build
 ##############################
 
 # Nodes which serve Acedb
-
 ACEDB_NODES=("be1.wormbase.org 
               brie6.cshl.edu 
 	      canopus.caltech.edu")
 
-OICR_ACEDB_NODES=("wb-blast.oicr.on.ca")
-
+OICR_ACEDB_NODES=("
+	wb-blast.oicr.on.ca
+	wb-acedb2.oicr.on.ca
+")
+#        wb-www3-warm.oicr.on.ca
 
 
 # Where our ACEDB files reside
@@ -107,18 +105,11 @@ MYSQL_NODES=("
 OICR_MYSQL_NODES=("
 	wb-www1.oicr.on.ca
 	wb-www2.oicr.on.ca
-	wb-www3-warm.oicr.on.ca
-        wb-blast.oicr.on.ca
+       wb-blast.oicr.on.ca
+       wb-acedb2.oicr.on.ca
 ");
 
-
-
-
-#              vab.wormbase.org 
-#              gene.wormbase.org
-#              blast.wormbase.org
-#	      freeze1.wormbase.org
-#	      freeze2.wormbase.org
+#       wb-www3-warm.oicr.on.ca
 
 # The location of the staging mysql data dir
 STAGING_MYSQL_DATA_DIR=/usr/local/mysql/data
@@ -153,8 +144,12 @@ SUPPORT_DB_DIRECTORY=/usr/local/wormbase/databases
 SUPPORT_DB_NODES=("blast.wormbase.org
 		   aceserver.cshl.edu
 		   gene.wormbase.org 
-                   vab.wormbase.org
  		   brie6.cshl.edu");
+
+OICR_SUPPORT_DB_NODES=("wb-acedb2.oicr.on.ca
+			wb-blast.oicr.on.ca
+			");
+#		        wb-www3-warm.oicr.on.ca
 
 
 ##############################
