new cron for syncing support dbs; mods to push software to include the admin module; added all nodes to update.conf

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -45,6 +45,16 @@ OICR_SITE_NODES=("
      ")
 #             wb-www3-warm.oicr.on.ca
 
+# Some operations need all nodes (like syncing the admin module)
+OICR_ALL_NODES=("wb-www1.oicr.on.ca
+	         wb-www2.oicr.on.ca
+                 wb-blast.oicr.on.ca
+                 wb-acedb1.oicr.on.ca
+                 wb-acedb2.oicr.on.ca
+                 wb-blast.oicr.on.ca
+		 ")
+	
+
 # Local site staging directory
 SITE_STAGING_DIRECTORY=/usr/local/wormbase/website-classic-staging
 
