commenting out unsupported blat dbs

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -40,18 +40,17 @@ SITE_NODES=("
 
 # The following sites at OICR require the website-classic codebase
 OICR_SITE_NODES=("
-             wb-blast.oicr.on.ca
+             wb-mining.oicr.on.ca
 	     wb-acedb2.oicr.on.ca
      ")
 #             wb-www3-warm.oicr.on.ca
 
 # Some operations need all nodes (like syncing the admin module)
-OICR_ALL_NODES=("wb-www1.oicr.on.ca
-	         wb-www2.oicr.on.ca
-                 wb-blast.oicr.on.ca
+OICR_ALL_NODES=("wb-gb1.oicr.on.ca
+	         wb-gb2.oicr.on.ca
+                 wb-mining.oicr.on.ca
                  wb-acedb1.oicr.on.ca
                  wb-acedb2.oicr.on.ca
-                 wb-blast.oicr.on.ca
 		 ")
 	
 
@@ -79,10 +78,9 @@ ACEDB_NODES=("be1.wormbase.org
 	      canopus.caltech.edu")
 
 OICR_ACEDB_NODES=("
-	wb-blast.oicr.on.ca
+	wb-mining.oicr.on.ca
 	wb-acedb2.oicr.on.ca
 ")
-#        wb-www3-warm.oicr.on.ca
 
 
 # Where our ACEDB files reside
@@ -113,13 +111,12 @@ MYSQL_NODES=("
 
 
 OICR_MYSQL_NODES=("
-	wb-www1.oicr.on.ca
-	wb-www2.oicr.on.ca
-       wb-blast.oicr.on.ca
-       wb-acedb2.oicr.on.ca
+	wb-gb1.oicr.on.ca
+	wb-gb2.oicr.on.ca
+        wb-mining.oicr.on.ca
+        wb-acedb2.oicr.on.ca
 ");
 
-#       wb-www3-warm.oicr.on.ca
 
 # The location of the staging mysql data dir
 STAGING_MYSQL_DATA_DIR=/usr/local/mysql/data
@@ -157,9 +154,8 @@ SUPPORT_DB_NODES=("blast.wormbase.org
  		   brie6.cshl.edu");
 
 OICR_SUPPORT_DB_NODES=("wb-acedb2.oicr.on.ca
-			wb-blast.oicr.on.ca
+			wb-mining.oicr.on.ca
 			");
-#		        wb-www3-warm.oicr.on.ca
 
 
 ##############################
