--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -41,16 +41,16 @@ SITE_NODES=("
 # The following sites at OICR require the website-classic codebase
 OICR_SITE_NODES=("
              wb-mining.oicr.on.ca
-	     wb-acedb2.oicr.on.ca
+	     wb-web1.oicr.on.ca
+	     wb-web2.oicr.on.ca
      ")
-#             wb-www3-warm.oicr.on.ca
 
 # Some operations need all nodes (like syncing the admin module)
 OICR_ALL_NODES=("wb-gb1.oicr.on.ca
 	         wb-gb2.oicr.on.ca
                  wb-mining.oicr.on.ca
-                 wb-acedb1.oicr.on.ca
-                 wb-acedb2.oicr.on.ca
+                 wb-web1.oicr.on.ca
+                 wb-web2.oicr.on.ca
 		 ")
 	
 
@@ -79,7 +79,8 @@ ACEDB_NODES=("be1.wormbase.org
 
 OICR_ACEDB_NODES=("
 	wb-mining.oicr.on.ca
-	wb-acedb2.oicr.on.ca
+	wb-web1.oicr.on.ca
+	wb-web2.oicr.on.ca
 ")
 
 
@@ -114,7 +115,8 @@ OICR_MYSQL_NODES=("
 	wb-gb1.oicr.on.ca
 	wb-gb2.oicr.on.ca
         wb-mining.oicr.on.ca
-        wb-acedb2.oicr.on.ca
+        wb-web1.oicr.on.ca
+        wb-web2.oicr.on.ca
 ");
 
 
@@ -153,7 +155,8 @@ SUPPORT_DB_NODES=("blast.wormbase.org
 		   gene.wormbase.org 
  		   brie6.cshl.edu");
 
-OICR_SUPPORT_DB_NODES=("wb-acedb2.oicr.on.ca
+OICR_SUPPORT_DB_NODES=("wb-web1.oicr.on.ca
+			wb-web2.oicr.on.ca
 			wb-mining.oicr.on.ca
 			");
 
