--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -31,10 +31,8 @@ SPECIES=("
 ##############################
 # Nodes which serve pages and need the software. Also includes the staging node
 SITE_NODES=("
-             brie6.cshl.org
 	     be1.wormbase.org
              canopus.caltech.edu
-             blast.wormbase.org
      ")
 
 # The following sites at OICR require the website-classic codebase
@@ -50,6 +48,7 @@ OICR_ALL_NODES=("wb-gb1.oicr.on.ca
                  wb-mining.oicr.on.ca
                  wb-web1.oicr.on.ca
                  wb-web2.oicr.on.ca
+		 wb-biomart.oicr.on.ca
 		 ")
 	
 
@@ -73,7 +72,6 @@ THIRD_PARTY_BUILD_DIR=build
 
 # Nodes which serve Acedb
 ACEDB_NODES=("be1.wormbase.org 
-              brie6.cshl.edu 
 	      canopus.caltech.edu")
 
 OICR_ACEDB_NODES=("
@@ -103,8 +101,7 @@ GBROWSE_PRODUCTION_MYSQL_DATA_DIR=/usr/local/mysql/data
 # MySQL
 ##############################
 # Nodes that host mysql databases
-MYSQL_NODES=("            
-             brie6.cshl.edu
+MYSQL_NODES=("
              be1.wormbase.org
              canopus.caltech.edu
 ")
@@ -149,13 +146,10 @@ MYSQL_DATABASES=("b_malayi
 # Support databases
 ##############################
 SUPPORT_DB_DIRECTORY=/usr/local/wormbase/databases
-SUPPORT_DB_NODES=("blast.wormbase.org
-		   aceserver.cshl.edu
- 		   brie6.cshl.edu");
-
 OICR_SUPPORT_DB_NODES=("wb-web1.oicr.on.ca
 			wb-web2.oicr.on.ca
 			wb-mining.oicr.on.ca
+			brie6.cshl.org
 			");
 
 
