new sync scripts to be run as cron jobs

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -80,6 +80,8 @@ OICR_ACEDB_NODES=("
 	wb-web2.oicr.on.ca
 ")
 
+REMOTE_ACEDB_NODES=("be1.wormbase.org 
+	             canopus.caltech.edu")
 
 # Where our ACEDB files reside
 ACEDB_ROOT=/usr/local/wormbase/acedb
@@ -101,7 +103,7 @@ GBROWSE_PRODUCTION_MYSQL_DATA_DIR=/usr/local/mysql/data
 # MySQL
 ##############################
 # Nodes that host mysql databases
-MYSQL_NODES=("
+REMOTE_MYSQL_NODES=("
              be1.wormbase.org
              canopus.caltech.edu
 ")
@@ -144,14 +146,18 @@ MYSQL_DATABASES=("b_malayi
 
 ##############################
 # Support databases
+# Synced to local and remote production nodes by cron
+# cron-rsync_support_dbs.sh
 ##############################
 SUPPORT_DB_DIRECTORY=/usr/local/wormbase/databases
 OICR_SUPPORT_DB_NODES=("wb-web1.oicr.on.ca
 			wb-web2.oicr.on.ca
 			wb-mining.oicr.on.ca
-			brie6.cshl.org
 			");
 
+REMOTE_SUPPORT_DB_NODES=("brie6.cshl.org
+			  canopus.caltech.edu
+			  ");
 
 ##############################
 # Simple formatting and alert functions
