no longer caching inline_feed

--- a/squid/etc/squid.fe.wormbase.org.conf
+++ b/squid/etc/squid.fe.wormbase.org.conf
@@ -138,6 +138,8 @@ acl movable  url_regex -i movable
 acl sitemap  url_regex -i sitemap
 acl wiki     url_regex -i wiki
 acl nbrowse  url_regex -i nbrowse
+#acl homepage urlpath_regex -i /
+acl inline_feed url_regex -i inline_feed
 
 no_cache deny GBROWSE
 no_cache deny GBROWSE2
@@ -148,6 +150,8 @@ no_cache deny movable
 no_cache deny sitemap
 no_cache deny wiki
 no_cache deny nbrowse
+#no_cache deny homepage
+no_cache deny inline_feed
 
 # OPTIONS WHICH AFFECT THE CACHE SIZE
 # -----------------------------------------------------------------------------
@@ -1024,7 +1028,7 @@ icp_access allow all
 #	mail if the cache dies.  The default is "webmaster."
 #
 #Default:
-cache_mgr info@toddharris.net
+cache_mgr todd@wormbase.org
 
 #  TAG: cache_effective_user, cache_effective_group
 #       The user and group that squid should run as
