fixed a problem with report magic

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -66,22 +66,15 @@ THIRD_PARTY_BUILD_HOME=/usr/local/wormbase
 THIRD_PARTY_BUILD_DIR=build
 
 
-##############################
-# AceDB
-##############################
-
-# Nodes which serve Acedb
-ACEDB_NODES=("be1.wormbase.org 
-	      canopus.caltech.edu")
-
+############################################
+# ACEDB - nodes which serve acedb requests
+############################################
 OICR_ACEDB_NODES=("
 	wb-mining.oicr.on.ca
 	wb-web1.oicr.on.ca
 	wb-web2.oicr.on.ca
 ")
-
-REMOTE_ACEDB_NODES=("be1.wormbase.org 
-	             canopus.caltech.edu")
+REMOTE_ACEDB_NODES=("canopus.caltech.edu")
 
 # Where our ACEDB files reside
 ACEDB_ROOT=/usr/local/wormbase/acedb
@@ -99,15 +92,10 @@ ACEDB_DIR=/usr/local/wormbase/acedb/wormbase_${VERSION}
 GBROWSE_PRODUCTION_MYSQL_DATA_DIR=/usr/local/mysql/data
 
 
-##############################
-# MySQL
-##############################
-# Nodes that host mysql databases
-REMOTE_MYSQL_NODES=("
-             be1.wormbase.org
-             canopus.caltech.edu
-")
-
+###########################################
+# MySQL - nodes that host mysql databases
+###########################################
+REMOTE_MYSQL_NODES=("canopus.caltech.edu")
 
 OICR_MYSQL_NODES=("
 	wb-gb1.oicr.on.ca
