added new web server nodes

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -1,3 +1,7 @@
+# FDT Location of the fdt.jar
+FDT_JAR=/home/tharris/fdt/fdt.jar
+
+
 # The first production node that we will stage updates from.
 # This is not necessary if the development node and all
 # production nodes reside within the firewall
@@ -40,6 +44,8 @@ OICR_SITE_NODES=("
              wb-mining.oicr.on.ca
 	     wb-web1.oicr.on.ca
 	     wb-web2.oicr.on.ca
+	     wb-web3.oicr.on.ca
+	     wb-web4.oicr.on.ca
      ")
 
 # Some operations need all nodes (like syncing the admin module)
@@ -48,6 +54,8 @@ OICR_ALL_NODES=("wb-gb1.oicr.on.ca
                  wb-mining.oicr.on.ca
                  wb-web1.oicr.on.ca
                  wb-web2.oicr.on.ca
+		 wb-web3.oicr.on.ca
+		 wb-web4.oicr.on.ca
 		 wb-biomart.oicr.on.ca
 		 ")
 	
@@ -73,6 +81,8 @@ OICR_ACEDB_NODES=("
 	wb-mining.oicr.on.ca
 	wb-web1.oicr.on.ca
 	wb-web2.oicr.on.ca
+	wb-web3.oicr.on.ca
+	wb-web4.oicr.on.ca
 ")
 REMOTE_ACEDB_NODES=("canopus.caltech.edu")
 
@@ -103,6 +113,8 @@ OICR_MYSQL_NODES=("
         wb-mining.oicr.on.ca
         wb-web1.oicr.on.ca
         wb-web2.oicr.on.ca
+	wb-web3.oicr.on.ca
+	wb-web4.oicr.on.ca
 ");
 
 
@@ -128,7 +140,6 @@ MYSQL_DATABASES=("b_malayi
                   clustal
 ")
 
-#                  nbrowse_wormbase
 # autocomplete
 
 
@@ -140,6 +151,8 @@ MYSQL_DATABASES=("b_malayi
 SUPPORT_DB_DIRECTORY=/usr/local/wormbase/databases
 OICR_SUPPORT_DB_NODES=("wb-web1.oicr.on.ca
 			wb-web2.oicr.on.ca
+			wb-web3.oicr.on.ca
+			wb-web4.oicr.on.ca
 			wb-mining.oicr.on.ca
 			");
 
@@ -151,10 +164,5 @@ REMOTE_SUPPORT_DB_NODES=("brie6.cshl.org
 # Simple formatting and alert functions
 ##############################
 SEPERATOR="==========================================="
-
-
-
-
-
 
 
