squid3 config is now pretty much complete

--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -1517,9 +1517,6 @@ http_port 8080 accel defaultsite=wb-web1.oicr.on.ca
 # This is the main website name, not the name of the proxy.
 acl our_servers dstdomain wb-web1.oicr.on.ca
 #acl our_servers dstdomain www.wormbase.org
-#http_access allow our_servers
-
-acl dbrequests urlpath_regex ^/db
 
 
 # Blog, forums, wiki. These are now all subdomains
@@ -1539,12 +1536,21 @@ acl blog urlpath_regex ^/blog
 acl social urlpath_regex ^/forums ^/blog ^/wiki
 
 # Send various mining queries to a single box.
-acl mining url_regex wb_query aql_query class_query batch_genes searches/advanced_dumper searches/epcr searches/strains cisortho blast_blat searches/blat
+acl mining url_regex wb_query aql_query class_query batch_genes searches/advanced_dumper searches/epcr searches/strains cisortho blast_blat searches/blat searches/basic
+
+# biomart
+acl biomart url_regex biomart martview
 
 # GBrowse2 URLs: Done 7/23/2010
 acl gbrowse2 url_regex  gb2/gbrowse gb2-support gbrowse2
-#acl gbrowse1 url_regex  seq/gbrowse seq/gbrowse/gbgff gbrowse/tmp gbrowse_img gb1-support
-#acl gbrowse1_proper     urlpath_regex ^/gbrowse
+acl gbrowse1 url_regex  seq/gbrowse seq/gbrowse/gbgff gbrowse/tmp gbrowse_img gb1-support
+acl gbrowse1_proper     urlpath_regex ^/gbrowse
+
+# Synteny Browser
+acl synteny url_regex gbrowse_syn synteny gbrowse/tmp/compara
+
+# Requests to /db
+acl db urlpath_regex ^/db
 
 # The computationally intensive gene page
 acl gene url_regex gene/gene
@@ -1556,15 +1562,27 @@ acl web3-images url_regex dynamic_images/wb-web3
 acl web4-images url_regex dynamic_images/wb-web4
 acl mining-images url_regex dynamic_images/wb-mining
 
+###########################################
+#
+#  Cache peers: back end origin servers
+#
+###########################################
 
-cache_peer 206.108.125.175 parent 80 0 no-query no-digest originserver name=wb-web1
-cache_peer 206.108.125.177 parent 80 0 no-query no-digest originserver name=wb-web2
-cache_peer 206.108.125.190 parent 80 0 no-query no-digest originserver name=wb-web3
-cache_peer 206.108.125.168 parent 80 0 no-query no-digest originserver name=wb-web4
-cache_peer 206.108.125.178 parent 80 0 no-query no-digest originserver name=mining
+# If using the external redirector, remove the "round-robin" directive
+# and comment out the applied ACLs below.
+
+# Round-robin cache peers
+cache_peer 206.108.125.175 parent 80 0 no-query no-digest originserver round-robin name=wb-web1
+cache_peer 206.108.125.177 parent 80 0 no-query no-digest originserver round-robin name=wb-web2
+cache_peer 206.108.125.190 parent 80 0 no-query no-digest originserver round-robin name=wb-web3
+cache_peer 206.108.125.168 parent 80 0 no-query no-digest originserver round-robin name=wb-web4
+
+# Data mining and gbrowse
+cache_peer 206.108.125.178 parent 80   0 no-query no-digest originserver name=mining
 cache_peer 206.108.125.173 parent 8080 0 no-query no-digest originserver name=gbrowse1
-cache_peer 206.108.125.173 parent 80 0 no-query no-digest originserver name=gbrowse2
+cache_peer 206.108.125.173 parent 80   0 no-query no-digest originserver name=gbrowse2
 
+# Social sites: blog, wiki, forums
 cache_peer 206.108.125.176 parent 80   0 no-query no-digest originserver name=blog
 cache_peer 206.108.125.176 parent 8080 0 no-query no-digest originserver name=wiki
 cache_peer 206.108.125.176 parent 8081 0 no-query no-digest originserver name=forums
@@ -1572,20 +1590,36 @@ cache_peer 206.108.125.176 parent 8081 0 no-query no-digest originserver name=fo
 # Some servers that still reside at CSHL
 cache_peer 143.48.220.68 parent 8080 0 no-query no-digest originserver name=be1
 
+# The synteny browser - STILL on mckay.cshl.edu
+cache_peer 143.48.220.100 parent 80 0 no-query no-digest originserver name=synteny
+
+# Biomart
+cache_peer 206.108.125.189 parent 80 0 no-query no-digest originserver name=biomart
+
+
+###########################################
+#
+#   Applying ACLs to redirect rules
+#
+###########################################
 
 # First, make sure we can actually connect
 http_access allow our_servers
 http_access deny all
 
-
-# Special Cases
+# Special cases: allow from its like-named ACL; deny from all others
 # GBrowse2
 cache_peer_access gbrowse2 allow gbrowse2
 cache_peer_access gbrowse2 deny all
 
 # GBrowse1 (Legacy)
-#cache_peer_access gbrowse1 allow gbrowse1
-#cache_peer_access gbrowse1 deny all
+cache_peer_access gbrowse1 allow gbrowse1
+cache_peer_access gbrowse1 allow gbrowse1_proper
+cache_peer_access gbrowse1 deny all
+
+# The synteny browser
+cache_peer_access synteny allow synteny
+cache_peer_access synteny deny all
 
 # The Blog
 cache_peer_access blog allow blog
@@ -1597,51 +1631,92 @@ cache_peer_access wiki deny all
 
 # Forums
 cache_peer_access forums allow forums
-cache_peer_access forums deny !forums
+cache_peer_access forums deny all
 
 # Data mining queries
 cache_peer_access mining allow mining
 cache_peer_access mining deny all
 
-# Gene pages to be1 - cannot connect to be1.wormbase.org - firewalled!
+cache_peer_access biomart allow biomart
+cache_peer_access biomart deny all
+
+# Gene pages to be1
 #cache_peer_access be1 allow gene
 #cache_peer_access be1 deny all
 
-
-# /db requests, distributed across web1-web4
+# /db and static requests, distributed across web1-web4
+# We have to deny gbrowse1/2 and mining because they are under /db.
+# We deny biomart, synteny, and social for safety
+# We allow everything else to distribute static content.
+# web1
 cache_peer_access wb-web1  deny gbrowse2
-cache_peer_access wb-web1  allow dbrequests
+cache_peer_access wb-web1  deny gbrowse1
+cache_peer_access wb-web1  deny gbrowse1_proper
+cache_peer_access wb-web1  deny mining
+cache_peer_access wb-web1  deny biomart
+#cache_peer_access wb-web1  deny gene
+cache_peer_access wb-web1  deny synteny
+cache_peer_access wb-web1  deny social
+cache_peer_access wb-web1  allow db
 cache_peer_access wb-web1  allow web1-images
+# Is this next statement the same thing as deny all?
+cache_peer_access wb-web1  allow !social !synteny !gbrowse2 !gene !mining
 cache_peer_access wb-web1  deny all
 
+# web2
 cache_peer_access wb-web2  deny gbrowse2
-cache_peer_access wb-web2  allow dbrequests
-cache_peer_access wb-web1  allow web2-images
+cache_peer_access wb-web2  deny gbrowse1
+cache_peer_access wb-web2  deny gbrowse1_proper
+cache_peer_access wb-web2  deny mining
+cache_peer_access wb-web2  deny biomart
+#cache_peer_access wb-web2  deny gene
+cache_peer_access wb-web2  deny synteny
+cache_peer_access wb-web2  deny social
+cache_peer_access wb-web2  allow web2-images
+cache_peer_access wb-web2  allow !social !synteny !gbrowse2 !gene !mining
 cache_peer_access wb-web2  deny all
 
+# web3
 cache_peer_access wb-web3  deny gbrowse2
-cache_peer_access wb-web3  allow dbrequests
+cache_peer_access wb-web3  deny gbrowse1
+cache_peer_access wb-web3  deny gbrowse1_proper
+cache_peer_access wb-web3  deny mining
+cache_peer_access wb-web3  deny biomart
+#cache_peer_access wb-web3  deny gene
+cache_peer_access wb-web3  deny synteny
+cache_peer_access wb-web3  deny social
+cache_peer_access wb-web3  allow db
 cache_peer_access wb-web3  allow web3-images
+cache_peer_access wb-web3  allow !social !synteny !gbrowse2 !gene !mining
 cache_peer_access wb-web3  deny all
 
+# web4
 cache_peer_access wb-web4  deny gbrowse2
+cache_peer_access wb-web4  deny gbrowse1
+cache_peer_access wb-web4  deny gbrowse1_proper
+cache_peer_access wb-web4  deny mining
+cache_peer_access wb-web4  deny biomart
+#cache_peer_access wb-web4  deny gene
+cache_peer_access wb-web4  deny synteny
+cache_peer_access wb-web4  deny social
+cache_peer_access wb-web4  allow db
 cache_peer_access wb-web4  allow web4-images
-cache_peer_access wb-web4  allow dbrequests
+cache_peer_access wb-web4  allow !social !synteny !gbrowse2 !gene !mining
 cache_peer_access wb-web4  deny all
 
 # Don't cache some entities
-acl news     url_regex -i rss
+acl rss url_regex rss
 acl feedback url_regex -i feedback
 cache deny gbrowse2
+cache deny synteny
 cache deny forums
 cache deny wiki
 cache deny blog
 cache deny feedback
-cache deny news
+cache deny rss
 
 
 # Only allow cachemgr access from localhost
-#http_access allow manager localhost
 #http_access deny manager
 # Deny requests to unknown ports
 #http_access deny !Safe_ports
@@ -2247,7 +2322,10 @@ pid_filename /usr/local/squid/var/logs/squid.pid
 #	"ALL,1".
 #
 #Default:
-# debug_options ALL,9
+#debug_options ALL,1
+#debug_options ALL,9
+
+# For debugging ACLs
 debug_options ALL,1 33,2 28,9
 
 #  TAG: log_fqdn	on|off
@@ -2420,7 +2498,7 @@ strip_query_terms off
 #
 #Default:
 # url_rewrite_children 5
-url_rewrite_children 14
+#url_rewrite_children 14
 
 #  TAG: url_rewrite_concurrency
 #	The number of requests each redirector helper can handle in
@@ -2440,6 +2518,7 @@ url_rewrite_children 14
 #
 #Default:
 #url_rewrite_host_header on
+url_rewrite_host_header off
 
 #  TAG: url_rewrite_access
 #	If defined, this access list specifies which requests are
@@ -3200,7 +3279,7 @@ cache_mgr info@toddharris.net
 #	names with this setting.
 #
 #Default:
-visible_hostname www.wormbase.org
+#visible_hostname www.wormbase.org
 
 #  TAG: unique_hostname
 #	If you want to have multiple machines with the same
